[project]
name = "SpynWave"
version = "0.1"
authors = [
 { name="Casper Schippers", email="c.f.schippers@tue.nl" },
]
description = "Library for controlling PSWS measurements"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
#    "pymeasure >= 0.11",  # TODO: see if it is best to use the production or git version
    "pymeasure @ git+https://github.com/pymeasure/pymeasure.git@cf87c23b933389c94fb8b329e7ed8673847084c9",
    "PyQt5 >= 5.15.7",
    "pandas >= 1.5.1",
    "scipy >= 1.9.3",
    "labjackpython >= 2.1.0",  # not on conda
    "pyyaml >= 6.0",
    "nidaqmx >= 0.6.4",  # conda: niqdaqmx-python
    "pywin32; platform_system=='Windows'",
]

[project.optional-dependencies]
tests = [
    "pytest >= 2.9.1",
]

[project.urls]
"Homepage" = "https://gitlab.tue.nl/fna/psws-python-measurement-suite"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"spynwave.data" = ["*.yaml", "*.txt"]
